src/pyflakes/snapshots/ruff__pyflakes__tests__F811_F811_4.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    RedefinedWhileUnused:
      - fu
      - 1
  location:
    row: 1
    column: 11
  end_location:
    row: 1
    column: 13
  fix: ~

