src/pyflakes/snapshots/ruff__pyflakes__tests__F811_F811_6.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    RedefinedWhileUnused:
      - os
      - 5
  location:
    row: 6
    column: 11
  end_location:
    row: 6
    column: 13
  fix: ~
  parent: ~

