src/pyflakes/snapshots/ruff__pyflakes__tests__F821_F821_2.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UndefinedName: Model
  location:
    row: 5
    column: 11
  end_location:
    row: 5
    column: 18
  fix: ~
  parent: ~

