src/pyflakes/snapshots/ruff__pyflakes__tests__F821_F821_3.py.snap
---
source: src/pyflakes/mod.rs
expression: checks
---
- kind:
    UndefinedName: key
  location:
    row: 11
    column: 8
  end_location:
    row: 11
    column: 13
  fix: ~
- kind:
    UndefinedName: value
  location:
    row: 11
    column: 15
  end_location:
    row: 11
    column: 22
  fix: ~

